[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/maingame/worlds/WorldPlayerTracker.gd" type="Script" id=1]
[ext_resource path="res://scenes/maingame/worlds/MapNode.gd" type="Script" id=2]
[ext_resource path="res://scenes/maingame/worlds/SeaAndWindNode.gd" type="Script" id=3]
[ext_resource path="res://scenes/maingame/worlds/MapEntityManager.gd" type="Script" id=4]
[ext_resource path="res://scenes/environment/ElementalNode.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/maingame/worlds/MapChecker.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/interacts/PlaceOfInteract.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/maingame/worlds/IslandManager.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/maingame/worlds/World.gd" type="Script" id=17]
[ext_resource path="res://assets/materials/panorama_shader.tres" type="Material" id=19]
[ext_resource path="res://scenes/maingame/worlds/DefaultMood.gd" type="Script" id=40]
[ext_resource path="res://assets/resources/island/DEFAULTVibe.tres" type="Resource" id=41]

[node name="World" type="Spatial"]
script = ExtResource( 17 )

[node name="ColorNode" type="Node" parent="."]
script = ExtResource( 40 )
moodResource = ExtResource( 41 )
panMat = ExtResource( 19 )

[node name="MapChecker" parent="." instance=ExtResource( 7 )]

[node name="MapEntityManager" parent="." instance=ExtResource( 10 )]
script = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 2048, 1024 )
transparent_bg = true
keep_3d_linear = true
usage = 3
render_target_v_flip = true
render_target_update_mode = 3

[node name="PanoramaRect" type="ColorRect" parent="Viewport"]
material = ExtResource( 19 )
margin_right = 2048.0
margin_bottom = 1024.0
mouse_filter = 1

[node name="InteractPlace" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90, 0 )

[node name="WorldPlayerTracker" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="WorldPlayerTracker"]
wait_time = 4.0
autostart = true

[node name="SeaAndWind" type="Spatial" parent="."]
script = ExtResource( 3 )
upperLimit = 40.0
middleValue = 30.0
lowerLimit = 10.0

[node name="MapNode" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ElementalNode" parent="." instance=ExtResource( 5 )]

[connection signal="map_out" from="." to="MapChecker" method="_on_World_map_out"]
[connection signal="map_out" from="." to="MapNode" method="_on_World_map_out"]
[connection signal="player_out" from="." to="MapEntityManager" method="_on_World_player_out"]
[connection signal="player_out" from="." to="WorldPlayerTracker" method="_on_World_player_out"]
[connection signal="savegame_out" from="." to="MapChecker" method="_on_World_savegame_out"]
[connection signal="savegame_out" from="." to="ElementalNode/EndlessSea" method="_on_World_savegame_out"]
[connection signal="world_loaded" from="." to="MapNode" method="_on_World_world_loaded"]
[connection signal="points_in_radius" from="MapChecker" to="MapEntityManager" method="_on_MapChecker_points_in_radius"]
[connection signal="entities_loaded" from="MapEntityManager" to="." method="_on_MapEntityManager_entities_loaded" flags=6]
[connection signal="emit_player_global_transform" from="WorldPlayerTracker" to="MapChecker" method="_on_WorldPlayerTracker_emit_player_global_transform"]
[connection signal="emit_player_global_transform" from="WorldPlayerTracker" to="SeaAndWind" method="_on_WorldPlayerTracker_emit_player_global_transform"]
[connection signal="emit_player_global_transform" from="WorldPlayerTracker" to="ElementalNode/EndlessSea" method="_on_WorldPlayerTracker_emit_player_global_transform"]
[connection signal="timeout" from="WorldPlayerTracker/Timer" to="WorldPlayerTracker" method="_on_Timer_timeout"]

[editable path="ElementalNode"]
